--- a/master.css
+++ b/master.css
@@ -88,3 +88,34 @@ li a:hover {
     background-color: #555;
     color: white;
 }
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 35px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #d7e4ff; /* Set a background color */
+    color: black; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: darkorchid; /* Add a dark-grey background on hover */
+}
+
+.progress-bar {
+    background-color: darkorchid;
+    border-radius: inherit;
+}
+
+.progress-container {
+    border: 3px solid white;
+    border-radius: 16px;
+    margin: 20px;
+}
