--- a/master.css
+++ b/master.css
@@ -32,7 +32,7 @@ body {
 }
 
 hr {
-    width: 50%;
+    width: 70%;
     color: white;
     border-width: 2px;
     border-style: solid;
@@ -86,7 +86,7 @@ li a {
 
 li a:hover {
     background-color: #555;
-    color: white;
+    color: darkorchid;
 }
 
 #myBtn {
